src/style.css
/* Custom Properties */
:root {
  /* Colors */
  --primary-color-300: #7f8cff;
  --primary-color-400: #6070ff;
  --primary-color-500: #396df2;
  --primary-color-800: #2230d2;
  --dark-blue: #172b4d;
  --text-color: #344563;
  --white: #fff;
  --black: #000;
  --gray-300: #f7f7f9;
  --gray-400: #c1c7d0;
  --gray-500: #b3bac5;
  --gray-600: #7a869a;
  --gray-700: #5e6c84;
  --gray-800: #253858;
  --light-blue: #ebebff;
  --border-color: #dfe1e6;
  --background-color: #e5e5e5;

  /* Fonts */
  --font-poppins: "Poppins", sans-serif;

  /* Font Sizes */

  --fs-100: 12px;
  --fs-200: 13px;
  --fs-300: 15px;
  --fs-400: 16px;
  --fs-500: 17px;
  --fs-600: 18px;
  --fs-700: 20px;
  --fs-800: 32px;
  --fs-900: 40px;
  --fs-950: 48px;
}

/* General Styles */
html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-poppins);
  background-color: var(--background-color);
}

.container {
  min-width: 375px;
  max-width: 1440px;
  margin: 0 auto;
  padding: 0;
}

.paragraph-text {
  color: var(--text-color);
  font-weight: 400;
  line-height: 1.5em;
}

/* Primary Button Styles */
.primary-button {
  color: var(--primary-color-500);
  background-color: var(--white);
  max-width: max-content;
  padding: 0.8em;
  font-size: var(--fs-500);
  font-weight: 500;
  line-height: 1.5em;
  letter-spacing: 0.03em;
  border: 1px solid var(--primary-color-400);
  border-radius: 0.5em;
  cursor: pointer;
  transition: all 250ms ease-in-out;
}

.primary-button:disabled {
  color: var(--gray-700);
  border: 1px solid var(--gray-400);
  cursor: not-allowed;
}

.primary-button:hover:enabled {
  background-color: var(--primary-color-400);
  color: var(--white);
}

.primary-button:active:enabled {
  background-color: var(--primary-color-800);
}

/* Social Media Links Styles */
.social-media-links__title {
  text-transform: uppercase;
  color: var(--primary-color-300);
  font-weight: 500;
  line-height: 1.5em;
  padding-bottom: 0.8em;
}

.social-media-links__icons {
  list-style: none;
  padding: 0;
  padding-bottom: 2em;
  margin: 0;
  display: flex;
  align-items: baseline;
  gap: 1.25em;
}

@media (min-width: 768px) {
  .paragraph-text {
    font-size: var(--fs-700);
  }

  .social-media-links__title {
    font-size: var(--fs-400);
  }
}

/* Header Styles */
.header {
  padding: 1em 0;
  background-color: var(--white);
}

.header__wrapper {
  margin: 0 auto;
  max-width: 1154px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 2em;
  padding: 0 1.5em;
}

/* Logo Styles */
.header__logo {
  text-decoration: none;
  color: var(--primary-color-400);
  font-style: normal;
  font-weight: 700;
  font-size: var(--fs-600);
  line-height: 1.25em;
  cursor: pointer;
}

/* Navbar Styles */
.header__nav {
  display: flex;
}

.header__nav__desktop {
  list-style: none;
  display: none;
  margin: 0;
  padding: 0;
}

.header__nav__link {
  text-decoration: none;
  color: var(--text-color);
  font-weight: 500;
  font-size: var(--fs-300);
  line-height: 1.25em;
}

.header__nav__link::after {
  display: block;
  content: "";
  border-bottom: solid 2px var(--text-color);
  transform: scaleX(0);
  transition: transform 100ms ease-in-out;
}

.header__nav__link:hover::after {
  transform: scaleX(1);
}

.header__hamburger-menu {
  cursor: pointer;
}

/* Header Desktop Styles */
@media (min-width: 768px) {
  .header__wrapper {
    padding: 0.625em;
  }

  .header__nav__desktop {
    display: flex;
    gap: 2em;
  }

  .header__hamburger-menu {
    display: none;
  }
}

/* Hero Section Styles */
.hero {
  background-image: url("assets/images/header-shapes-mobile.svg");
  background-color: var(--white);
  background-repeat: no-repeat;
  background-size: contain;
  min-height: 588px;
  border-bottom-left-radius: 4em;
  display: flex;
  justify-content: center;
}

.hero__wrapper {
  max-width: 920px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  gap: 1.5em;
  padding: 0 1.5em;
  padding-top: 5em;
}

.hero__header {
  color: var(--dark-blue);
  font-weight: 700;
  font-size: var(--fs-900);
  line-height: 1.25em;
  display: flex;
  flex-direction: column;
}

@media (min-width: 768px) {
  .hero {
    background-image: url("assets/images/header-shapes-desktop.svg");
    background-size: contain;
  }

  .hero__header {
    font-size: var(--fs-950);
  }

  .hero__wrapper {
    justify-content: center;
    padding-top: 18rem;
    padding-bottom: 13.9375em;
  }
}

/* Works Section Styles */
.works__cards-list {
  margin: 0;
  padding: 7em 0;
  list-style: none;
  display: grid;
  gap: 5.5em;
}

.works__project-card {
  max-width: 1156px;
  margin: 0 auto;
  border-radius: 1em;
  padding: 1em;
  background-color: var(--white);
  border: 1px solid var(--border-color);
  display: flex;
  flex-direction: column;
  gap: 0.8em;
}

.works__project-card__screenshot-wrapper {
  overflow: hidden;
  border-radius: 0.5em;
}

.works__project-card__body {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 0.8em;
}

.works__project-card__title {
  font-weight: 700;
  font-size: var(--fs-800);
}

.works__project-card__summary {
  display: flex;
  gap: 0.8em;
  font-size: var(--fs-300);
  font-weight: 600;
  line-height: 1em;
}

.works__project-card__client {
  color: var(--text-color);
  text-transform: uppercase;
}

.works__project-card__role,
.works__project-card__year {
  color: var(--gray-600);
}

.works__project-card__intro {
  color: var(--text-color);
  font-size: var(--fs-300);
  line-height: 1.5em;
}

.works__project-card__tech-stack-list {
  list-style: none;
  padding: 0;
  margin: 0;
  margin-bottom: 0.5em;
  display: flex;
  gap: 0.5em;
}

.works__project-card__tech-stack-item {
  color: var(--primary-color-400);
  background-color: var(--light-blue);
  padding: 0.25em 0.8em;
  border-radius: 0.5em;
  text-transform: uppercase;
}

/* Works Section Desktop Styles */
@media (min-width: 768px) {
  .works__cards-list {
    gap: 8.875em;
  }
  .works__project-card {
    flex-direction: row;
    gap: 2.87em;
    padding: 1.375em;
  }

  .works__project-card:nth-child(even) {
    flex-direction: row-reverse;
  }

  .works__project-card > * {
    flex: 1 1 0px;
  }

  .works__project-card__title {
    font-size: var(--fs-900);
  }

  .works__project-card__summary {
    font-size: var(--fs-600);
    font-weight: 400;
  }

  .works__project-card__intro {
    font-size: var(--fs-400);
  }

  .works__project-card__body {
    padding: 1.5em;
  }

  .works__project-card__tech-stack-item {
    text-transform: lowercase;
    font-size: var(--fs-100);
  }
}

/* About Me Styles */
.about-me {
  background-color: var(--white);
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 0.5em;
  padding: 7em 1.5em 11em 1.5em;
  border-top-right-radius: 4em;
}

.about-me__summary {
  display: flex;
  flex-direction: column;
  align-items: start;
  gap: 0.5em;
}

.about-me__header {
  color: var(--dark-blue);
  font-weight: 700;
  font-size: var(--fs-900);
}

.about-me__skills {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 2em;
  list-style: none;
  padding: 2em 0;
  margin: 0;
}

.about-me__skills__header {
  display: flex;
  justify-content: space-between;
  padding: 1.75rem 1.5rem 1.75rem 0.8rem;
  color: var(--black);
  font-size: var(--fs-700);
  font-weight: 500;
  border-bottom: 1px solid var(--border-color);
  cursor: pointer;
}

.about-me__skills__header.expanded {
  border: none;
}

.about-me__skills__header.expanded > img {
  transform: rotateZ(90deg);
}

.about-me__languages-list {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 1.5em;
  list-style: none;
  padding: 0;
  padding-left: 0.8rem;
  margin: 0;
}

.about-me__language-item {
  display: flex;
  justify-content: start;
  align-items: center;
  gap: 1em;
  padding: 0.5625em 0.8em;
  background-color: var(--gray-300);
  color: var(--gray-800);
  border-radius: 0.5em;
  font-weight: 500;
  font-size: var(--fs-300);
  line-height: 3.25em;
}

@media (min-width: 768px) {
  .about-me {
    flex-direction: row;
    gap: 2.5em;
    justify-content: center;
  }

  .about-me__paragraph {
    font-size: var(--fs-400);
  }

  .about-me__summary {
    width: 40%;
    max-width: 447px;
    padding-top: 3.75em;
  }

  .about-me__skills {
    width: 60%;
    max-width: 618px;
  }

  .about-me__languages-list {
    flex-direction: row;
  }

  .about-me__language-item {
    flex-direction: column;
    align-items: flex-start;
    width: 7.625em;
    padding: 0.75em;
  }
}

/* Contact Form Styles */
.contact-me {
  background-image: url("assets/images/contact-form-bg-mobile.svg");
  background-repeat: no-repeat;
  background-position: 103% 30%;
  background-size: 62% 100%;
  background-color: var(--primary-color-400);
  padding-top: 6em;
  padding-bottom: 2.8125em;
  border-top-left-radius: 4em;
  margin-top: -4em;
}

.contact-me__wrapper {
  max-width: 35em;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1em;
}

.contact-me__title {
  text-align: center;
  color: var(--white);
  font-size: var(--fs-900);
  font-weight: 700;
  line-height: 1.5em;
}

.contact-me__description {
  text-align: center;
  padding: 0 1em;
  color: var(--light-blue);
  font-size: var(--fs-700);
  line-height: 1.75em;
}

.contact-me__form {
  margin-top: 2.25em;
  width: 100%;
  max-width: 28em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
}

.contact-me__form__input {
  width: 100%;
  border-radius: 0.5em;
  padding: 1em;
  outline: none;
  border: 2px solid transparent;
}

.contact-me__form__input:focus {
  border-color: var(--black);
}

.contact-me__form__textarea {
  min-height: 10em;
  resize: vertical;
  transition: 0.2s;
}

.contact-me__form__textarea:focus {
  border-color: var(--black);
}

@media (min-width: 768px) {
  .contact-me {
    background-image: url("assets/images/contact-form-bg-desktop.svg");
    background-repeat: no-repeat;
    background-position: 40% 70%;
    background-size: 80%;
    padding-top: 8.875em;
    padding-bottom: 7.9375em;
  }

  .contact-me__form__input {
    border-radius: 0.125em;
  }
}

